# these

./: .env.example  .gitignore  .mcp.json  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PR_LOG.md  README.md  pyproject.toml  test-martinique.py
.claude/commands/: ouverture-biblio.md
.github/: pull_request_template.md
.github/workflows/: backfill-changelog.yml  backfill-pr-log.yml  ci.yml  pr_to_log.yml  release-to-changelog.yml
data/: data_sources.csv  sources.csv
docs/: 1_introduction.md  8_liste_figures.rst  api.md  api.rst  bib_annotation_style.py  clean_data.rst  conf.py  download_INSEE.rst  download_OSM.rst  download_data.rst  hurricanes.rst  index.md  index.rst  introduction.md  modules.rst  myst.yml  pdf_index.rst  primary-sidebar-footer.md  processing.rst  references.bib  toc.yml
docs/1_preambule/: index.md  these_ouverte.md  utilisation.md
docs/2_introduction/: introduction.md  nouvelle_intro.md
docs/3_contexte/: SES.md  amenagement.md  approche-COMMOD.md  cyclones.md  cyclones_biblio_pdf.rst  etudes-de-cas.md  fiche-pratique-COMMOD.md  index.md  limitations-df.md  martinique.md  prospective.md  risque.md
docs/4_methodes/: etude-cas.md  index.md  modele.md  preparation_terrain.md  systeme.md
docs/5_resultats/: index.md  index.rst
docs/6_discussion/: index.md
docs/7_conclusion/: index.md
docs/about/: LICENSE.md  README.md  index.md
docs/contexte/: SES.md  approche-COMMOD.md  fiche-pratique-COMMOD.md  index.md
docs/experiments/: index.rst
docs/methods/: index.md  index.rst
docs/notebooks/: export.ipynb  index.rst  merge_data.ipynb  modeling_damages.ipynb
docs/notions/: adaptation.md  commod.md  index.md  modele.md
docs/scripts/: apply_global_mermaid_theme.py
docs/source/: conf.py  download_INSEE.rst  download_OSM.rst  hurricanes.rst  modules.rst
docs/templates/these-chapitre/: README.md  template (# Name clash 2026-04-21 3oht7tC #).fls  template.fls  (+3 more)
modele_sig.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: download_OSM.ipynb  export.ipynb  merge_data.ipynb  tropical_storms.ipynb
scripts/: clean_data.py  download_ESAlandcover.py  download_INSEE.py  download_data.py  download_elevation.py  download_figshare.py  hurricanes.py  patch-myst-docx-renderer.cjs  visualisation.py
src/carto/: test-baie-fort-de-france-mnt-bathymetrie.py  test-baie-fort-de-france.py  test-martinique-atlas.py  test-martinique.py  test-precheur-mnt-bathymetrie.py
src/utils/: carto.py  data_clean.py  diagramme.py  download_OSM.py  download_data.py  hurricanes.py  processing.py  test.py  visualisation.py
templates/these-chapitre/: README.md  template.yml
templates/tufte/: template.tex  template.yml  tufte-common.def
tests/: test_blank_raster.py  test_filter_track.py  test_harversine.py  test_mask_points.py  test_track_in_geometry.py  test_track_to_ds.py
(+8 files in other folders)
