[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modele-sig"
version = "0.1.0"
description = "Open-science tools for hurricane and geospatial processing"
authors = [
  { name = "Gabriel Genelot" }
]
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "shapely",
  "rasterio",
  "xarray",
]

[project.optional-dependencies]


docs = [
  "sphinx>=7.4,<8.3",
  "myst-parser>=2.0,<3.1",
  "myst-nb>=1.1,<1.4",
  "sphinx-rtd-theme",
  "sphinxcontrib-bibtex>=2.5",
  "furo",
  "sphinxcontrib.mermaid",

]


# Développement
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-dir]
scripts = "scripts"
